# coldfront-ingestor

./: .gitignore  Makefile  README.md  pyproject.toml
src/cfingestor/: cli.py  slurm.py
